[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nr-wg-mtu-finder"
version = "0.2.1"
description = "Scripts to find the optimal MTU for Wireguard server and peers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "nitred", email = "nitish.k.reddy@gmail.com" },
]

dependencies = [
  "pandas>=1.3.5",
  "matplotlib>=3.4.3",
  "seaborn>=0.11.2",
  "pydantic>=1.8.2",
  "requests>=2.27.1",
  "flask>=2.0.3",
  "werkzeug>=2.0.3",
]

[project.optional-dependencies]
dev = [
  "black>=22.1.0",
]

[project.scripts]
nr-wg-mtu-finder = "nr_wg_mtu_finder.main:run"
nr-wg-mtu-finder-heatmap = "nr_wg_mtu_finder.main_heatmap:run"
